# django-starter

./: .gitignore  README.md  pyproject.toml
config/: contexts.py  settings.py  urls.py
main/: urls.py  views.py
static/css/: styles.css
templates/: _base_authenticated.html  _base_error.html  _base_guest.html  _base_login.html  index.html
templates/errors/: 400.html  401.html  403.html  404.html  500.html
templates/main/: dashboard.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
